   - fix issue on timer management
   - fix deprecated hooks of LIBC
   - fix definitions in afb-v4.h
   - fix expiration of afb_sched_enter and change its logic
   - fix timer used for expiration to be REALTIME_CLOCK
   - fix compiling with WITH_AFB_CALL_SYNC=OFF
   - fix timer reference (critical)
   - fix encoding of data copy
   - fix size indicator of AFBRPCv2

  minor/details
   - fix declarations in afb-api-v4 and improved API
   - report SIGALARM instead of SIGVTALARM that is specific
   - enhance timer management
   - improve network latency by using TCP_NODELAY

Version 4.0.4
-------------

  features
   - REWORKED SCHEDULER
   - add new RPC support
   - rework of the afb-api for RPC
   - returning HTTP binary blobs from bindings
   - add support of specialized interface
   - add pseudo socket protocol 'char:' for being client of serial link

  fixes
   - json-locator fixes
   - fix overflow detection of afb-type
   - fix leak in afb-hreq
   - fix automatic pong response of WS
   - avoid concurrent calls to MHD_run
   - fix compatibility to old json-c
   - enforce use of default credentials
   - fix bug in afb-trace

  minors/details
   - improvements of afb-wsj1
   - cleaning afb-stub-ws
   - improve type conversion

Version 4.0.3
-------------

  features
   - add function handling event within api v4 (for extensions)

  fixes
   - add release version in pc files
   - Fix POST/HTTP requests

Version 4.0.2
-------------

  features
    - add reply code if available in wsj1
    - Enforce use of strings to define extensions in macro AFB_EXTENSION
    - Check revision of the version of interface v4
    - support of byte array type: afb_type_predefined_bytearray
    - Remove cookie's attribute 'Secure'
    - improve error handling compatibility with v4
    - Allow providing more than one converter for a given couple of types
    - implement conversion of parameters of requests

  fixes
    - update timeout of sessions on requests