@@ -1244,7 +1244,7 @@ static const struct afb_ws_itf server_ws_itf =
 
 /*****************************************************/
 
-static struct afb_proto_ws *afb_proto_ws_create(int fd, const struct afb_proto_ws_server_itf *itfs, const struct afb_proto_ws_client_itf *itfc, void *closure, const struct afb_ws_itf *itf)
+static struct afb_proto_ws *afb_proto_ws_create(int fd, int autoclose, const struct afb_proto_ws_server_itf *itfs, const struct afb_proto_ws_client_itf *itfc, void *closure, const struct afb_ws_itf *itf)
 {
 	struct afb_proto_ws *protows;
 
@@ -1252,7 +1252,7 @@ static struct afb_proto_ws *afb_proto_ws_create(int fd, const struct afb_proto_w
 	if (protows) {
 		fcntl(fd, F_SETFD, FD_CLOEXEC);
 		fcntl(fd, F_SETFL, O_NONBLOCK);
-		protows->ws = afb_ws_create(fd, itf, protows);
+		protows->ws = afb_ws_create(fd, autoclose, itf, protows);
 		if (protows->ws != NULL) {
 			protows->refcount = 1;
 			protows->version = WSAPI_VERSION_UNSET;
@@ -1267,11 +1267,11 @@ static struct afb_proto_ws *afb_proto_ws_create(int fd, const struct afb_proto_w
 	return NULL;
 }
 
-struct afb_proto_ws *afb_proto_ws_create_client(int fd, const struct afb_proto_ws_client_itf *itf, void *closure)
+struct afb_proto_ws *afb_proto_ws_create_client(int fd, int autoclose, const struct afb_proto_ws_client_itf *itf, void *closure)
 {
 	struct afb_proto_ws *protows;
 
-	protows = afb_proto_ws_create(fd, NULL, itf, closure, &proto_ws_client_ws_itf);
+	protows = afb_proto_ws_create(fd, autoclose, NULL, itf, closure, &proto_ws_client_ws_itf);
 	if (protows) {
 		if (send_version_offer_1(protows, WSAPI_VERSION_1) != 0) {
 			afb_proto_ws_unref(protows);
@@ -1281,9 +1281,9 @@ struct afb_proto_ws *afb_proto_ws_create_client(int fd, const struct afb_proto_w
 	return protows;
 }
 
-struct afb_proto_ws *afb_proto_ws_create_server(int fd, const struct afb_proto_ws_server_itf *itf, void *closure)
+struct afb_proto_ws *afb_proto_ws_create_server(int fd, int autoclose, const struct afb_proto_ws_server_itf *itf, void *closure)
 {
-	return afb_proto_ws_create(fd, itf, NULL, closure, &server_ws_itf);
+	return afb_proto_ws_create(fd, autoclose, itf, NULL, closure, &server_ws_itf);
 }
 
 void afb_proto_ws_unref(struct afb_proto_ws *protows)
