@@ -188,7 +188,7 @@ struct afb_wsapi_itf
 	void (*on_description)(void *closure, const struct afb_wsapi_msg *msg);
 };
 
-extern int afb_wsapi_create(struct afb_wsapi **wsapi, int fd, const struct afb_wsapi_itf *itf, void *closure);
+extern int afb_wsapi_create(struct afb_wsapi **wsapi, int fd, int autoclose, const struct afb_wsapi_itf *itf, void *closure);
 
 extern struct afb_wsapi *afb_wsapi_addref(struct afb_wsapi *wsapi);
 extern void afb_wsapi_unref(struct afb_wsapi *wsapi);
